sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:4: error: value tolgr is not a member of Int
  for(pivot<-1 tolgr-1){
               ^AlgInsertionSort:7: error: not found: value vtemp
    while(getValeur(pTemp)>vtemp && pTemp>0){copie(pTemp,Ptemp+1);pTemp-=1}
                           ^AlgInsertionSort:7: error: not found: value Ptemp
    while(getValeur(pTemp)>vtemp && pTemp>0){copie(pTemp,Ptemp+1);pTemp-=1}
                                                         ^