sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	val lgr=getNombreValeurs()
  for(pivot<-1 tolgr-1){
    var vTemp=getValeur(pivot)
    var pTemp=pivot-1
    while(getValeur(pTemp)>vtemp && pTemp>0){copie(pTemp,Ptemp+1);pTemp-=1}
    setValeur(pTemp+1,vTemp)
  }}